# my-vector-db

./: .gitmodules  CMakeLists.txt  FaissIndex.cpp  FaissIndex.h  HNSWLibIndex.cpp  HttpServer.cpp  HttpServer.h  IndexFactory.cpp  IndexFactory.h  README.md  ScalarStorage.cpp  VectorDatabase.cpp  logger.h  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: FaissIndex.h  FilterIndex.h  HNSWLibIndex.h  HttpServer.h  IndexBase.h  IndexFactory.h  Persistence.h  ScalarStorage.h  VectorDatabase.h  VectorIndex.h  logger.h  utils.h
src/: FaissIndex.cpp  FilterIndex.cpp  HNSWLibIndex.cpp  HttpServer.cpp  IndexFactory.cpp  Persistence.cpp  ScalarStorage.cpp  VectorDatabase.cpp  logger.cpp  main.cpp  utils.cpp
